[project]
name = "temporal-samples"
version = "0.1.0"
description = "A mono-repo of Temporal workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm==1.72.2",
    "logfire==3.18.0",
    "poethepoet==0.36.0",
    "pydantic==2.11.4",
    "pydantic-ai-slim[openai]==0.2.16",
    "pytz==2025.2",
    "structlog==25.4.0",
    "temporalio==1.11.1",
]

[dependency-groups]
smolagents = [
    "helium==5.1.1",
    "pillow==11.2.1",
    "selenium==4.33.0",
    "smolagents==1.18.0",
]

[tool.pylint.messages_control]
disable = ["redefined-builtin"]

[tool.poe.tasks]
structlog_hello = "-m python.structlog.structlog_hello"
custom_metrics = "-m python.observability.custom_metrics"
observability_worker = "-m python.observability.worker"
interceptor_simple = "-m python.interceptor.simple.interceptor_simple"

[tool.poe.tasks.structlog_formatter]
env = { STAGE = "DEVELOPMENT", LOG_LEVEL = "INFO" }
script = "python.structlog.structlog_formatter"
